--- a/app/src/main/res/layout/route_xml.xml
+++ b/app/src/main/res/layout/route_xml.xml
@@ -34,8 +34,8 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="399dp"
-                android:layout_height="99dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginEnd="8dp"
@@ -64,7 +64,7 @@
             <EditText
                 android:id="@+id/editText2"
                 android:layout_width="412dp"
-                android:layout_height="54dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="3dp"
                 android:layout_marginLeft="3dp"
                 android:ems="10"
@@ -74,14 +74,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.75"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/routeOption" />
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="399dp"
-                android:layout_height="135dp"
-                android:layout_marginEnd="15dp"
-                android:layout_marginRight="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="Wijnhaven 107 lays in the center of Rotterdam. If approaching from the south, drive over the Erasmusbrug. When approaching from the north, drive over the Coolsingel in the direction of the Kubuswoningen, then take a right turn at the Posthornstraat, and take the second right turn to Wijnhaven 107."
                 android:textColor="#ffffff"
@@ -94,7 +92,7 @@
             <EditText
                 android:id="@+id/editText"
                 android:layout_width="402dp"
-                android:layout_height="49dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="4dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginEnd="5dp"
@@ -107,6 +105,23 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+            <Button
+                android:id="@+id/routeOption"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/custom_button"
+                android:text="Get Route"
+                android:textColor="#CC0033"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
             <fragment
                 android:id="@+id/map"
