--- a/app/src/main/res/layout/cmd1.xml
+++ b/app/src/main/res/layout/cmd1.xml
@@ -94,7 +94,7 @@
 
             <TextView
                 android:id="@+id/infOpenDay"
-                android:layout_width="323dp"
+                android:layout_width="351dp"
                 android:layout_height="95dp"
                 android:layout_marginStart="87dp"
                 android:layout_marginLeft="87dp"
@@ -115,14 +115,15 @@
                 android:layout_width="120dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/QuestionText"
                 android:textColor="#CC0033"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/act1TextView" />
+                app:layout_constraintTop_toBottomOf="@+id/act1TextView"
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
                 android:id="@+id/route"
@@ -130,13 +131,12 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="456dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/RouteText"
                 android:textColor="#CC0033"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.82" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/email"
