--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -22,24 +22,24 @@
     <item
         android:id= "@+id/studychoice"
         android:title="Study choice test"
-        android:icon="@drawable/baseline_done_black_24dp">
+        android:icon="@drawable/choiceicn">
 
     </item>
     <item
         android:id= "@+id/codingquiz"
         android:title="Code Quiz"
-        android:icon="@drawable/baseline_done_black_24dp">
+        android:icon="@drawable/quizicn">
 
     </item>
     <item
         android:id= "@+id/mysocial"
         android:title="@string/Questions"
-        android:icon="@drawable/ic_mail_black_24dp">
+        android:icon="@drawable/questionicn">
 
     </item>
     <item
         android:id="@+id/contactpage"
-        android:icon="@drawable/ic_mail_black_24dp"
+        android:icon="@drawable/contacticn"
         android:title="Contact"></item>
 
 
