--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/study_test4"
+    android:id="@+id/activity_quiz"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CC0033"
     android:orientation="vertical"
-    tools:context=".Study_test4">
+    android:background="@color/colorPrimary"
+    tools:context=".QuizActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Question    of 14"
+            android:text="Question        of 14"
             android:textSize="20sp"
             android:textColor="#fff"
             android:layout_alignParentLeft="true"
@@ -30,33 +30,24 @@
             android:layout_alignStart="@+id/score_text"
             android:layout_alignLeft="@+id/score_text"
             android:layout_alignParentRight="true"
-            android:layout_marginStart="86dp"
-            android:layout_marginLeft="86dp"
-            android:layout_marginRight="306dp"
-            android:text="4"
+            android:layout_marginStart="92dp"
+            android:layout_marginLeft="92dp"
+            android:layout_marginRight="26dp"
+            android:text="1"
             android:textColor="#fff"
             android:textSize="20sp" />
 
     </RelativeLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:progress="29"/>
-
     <TextView
-        android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp"
-        android:padding="8dp"
-        android:text="I enjoy planning how to spend my money"
+        android:text="Which thing is alive?"
         android:textColor="#fff"
         android:textSize="20sp"
-        android:layout_alignParentLeft="true" />
+        android:padding="8dp"
+        android:layout_marginBottom="40dp"
+        android:id="@+id/question"/>
 
 
     <Button
@@ -66,8 +57,8 @@
         android:layout_marginBottom="24dp"
         android:background="#fff"
         android:padding="8dp"
-        android:text="@string/weak"
-        android:textColor="#000000" />
+        android:text="weak"
+        android:textColor="#000" />
 
     <Button
         android:id="@+id/choice2"
@@ -76,28 +67,29 @@
         android:layout_marginBottom="24dp"
         android:background="#fff"
         android:padding="8dp"
-        android:text="@string/mediocre"
-        android:textColor="#000000" />
+        android:text="reasonable"
+        android:textColor="#000" />
 
     <Button
-        android:id="@+id/choice3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:text="rock"
         android:background="#fff"
+        android:textColor="#000"
         android:padding="8dp"
-        android:text="@string/reasonable"
-        android:textColor="#000000" />
+        android:layout_marginBottom="24dp"
+        android:id="@+id/choice3"/>
 
     <Button
-        android:id="@+id/choice4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:text="quit"
         android:background="#fff"
+        android:textColor="#000"
         android:padding="8dp"
-        android:text="@string/strong"
-        android:textColor="#000000" />
+        android:layout_marginBottom="24dp"
+        android:id="@+id/choice4"/>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
