--- a/app/src/main/res/layout/study_test_results.xml
+++ b/app/src/main/res/layout/study_test_results.xml
@@ -27,6 +27,7 @@
         android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:textColor="#FFFFFF"
         android:layout_marginTop="183dp"
         android:autoLink="web"
         android:gravity="center"
@@ -40,6 +41,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="238dp"
         android:gravity="center"
+        android:textColor="#FFFFFF"
         android:text="@string/text_to_change2"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -50,6 +52,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="295dp"
         android:gravity="center"
+        android:textColor="#FFFFFF"
         android:text="@string/text_to_change3"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -67,6 +70,7 @@
         android:layout_marginEnd="58dp"
         android:layout_marginRight="58dp"
         android:layout_marginBottom="462dp"
+        android:textColor="#FFFFFF"
         android:text="@string/text_to_show"
         android:textSize="20sp" />
 
