--- a/app/src/main/res/layout/study_test_results.xml
+++ b/app/src/main/res/layout/study_test_results.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:textColor="#CC0033"
         android:layout_alignParentRight="true"
         android:background="@drawable/custom_button"
         android:layout_marginStart="111dp"
@@ -82,6 +83,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:textColor="#CC0033"
         android:layout_alignParentRight="true"
         android:layout_marginStart="110dp"
         android:layout_marginLeft="110dp"
